<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Edufi</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log Out</string>

    <!-- Login Activity -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login">Log In</string>
    <string name="not_registered">Not registered?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="continueOn">Continue</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Profile</item>
        <item >Find Tutors</item>
        <item >Tutor Me</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>



    <!--Setup Activity-->
    <string name="setup">Setup</string>
    <string name="user_type_question">What are you?</string>
    <string name="tutor">Tutor</string>

    <!--Setup Tutor Activity-->
    <string name="student">Student</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number (e.g. 310-123-4567)</string>
    <string name="level_of_education">Highest Level of Education Completed:</string>
    <string-array name="level_of_education_array">
        <item>High School</item>
        <item>Bachelor\'s</item>
        <item>Postgraduate</item>
    </string-array>
    <string name="subjects_to_tutor">Subjects you want to tutor:</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="submit">Submit</string>

    <!--Setup Student Activity-->
    <string name="year_in_school">Year in School:</string>
    <string-array name="year_in_school_array">
        <item>6th Grade</item>
        <item>7th Grade</item>
        <item>8th Grade</item>
        <item>9th Grade</item>
        <item>10th Grade</item>
        <item>11th Grade</item>
        <item>12th Grade</item>
        <item>College Freshman</item>
        <item>College Sophomore</item>
        <item>College Junior</item>
        <item>College Senior</item>
    </string-array>
    <string name="subjects_student_needs">Subjects you need help in:</string>

    <!--View Tutor Profile Activity-->
    <string name="viewTutor">View Tutor Profile</string>

</resources>
