<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container2"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="normal" >

        <EditText
            android:id="@+id/inputEmailAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/email_address"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/inputPhoneNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/phone_number"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_in_school"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal" />

        <Spinner
            android:id="@+id/spinnerYearInSchool"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal"
            android:onClick="submit"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="30dp">
        </Button>

    </LinearLayout>

</LinearLayout>
