<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:text="Enter a username and password:"
            android:autoLink="all"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:textSize="20dp"
            android:editable="false"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:focusableInTouchMode="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/container2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:password="true" />

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/continueOn"
            android:onClick="continueOn"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</LinearLayout>