<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:text="@string/app_name"
            android:autoLink="all"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="60dp"
            android:editable="false"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:focusableInTouchMode="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/container2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:password="true" />

        <Button
            android:id="@+id/buttonlogIn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="login"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/container3"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/not_registered"
            android:fontFamily="sans-serif-thin"
            android:textStyle="normal"
            android:layout_marginBottom="10dp"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up"
            android:fontFamily="sans-serif-thin"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:onClick="signUpUser"
            android:clickable="true"
            android:textColorHighlight="@color/blue"
            android:textColorHint="@color/blue"
            android:textColorLink="@color/blue"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>




    <!--<LinearLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:orientation="vertical" >-->

    <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/container" >-->

        <!--<TextView-->
            <!--android:id="@+id/what_are_you"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:text="@string/user_type_question"-->
            <!--android:autoLink="all"-->
            <!--android:fontFamily="sans-serif-thin"-->
            <!--android:textStyle="normal"-->
            <!--android:textSize="30dp"-->
            <!--android:editable="false"-->
            <!--android:gravity="center"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_marginTop="50dp" />-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--android:id="@+id/container2"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_marginRight="30dp">-->

        <!--<Button-->
            <!--android:id="@+id/tutor"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/tutor"-->
            <!--android:onClick="setupTutor"-->
            <!--android:textSize="25dp"-->
            <!--android:fontFamily="sans-serif-thin"-->
            <!--android:textStyle="normal"-->
            <!--android:layout_weight="1" />-->

        <!--<TextView-->
            <!--android:id="@+id/centerPoint"-->
            <!--android:text=""-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_weight="10" />-->

        <!--<Button-->
            <!--android:id="@+id/student"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/student"-->
            <!--android:onClick="setupStudent"-->
            <!--android:textSize="25dp"-->
            <!--android:fontFamily="sans-serif-thin"-->
            <!--android:textStyle="normal"-->
            <!--android:layout_weight="1" />-->
    <!--</LinearLayout>-->

<!--</LinearLayout>-->


